cluster/monitoring/mimir/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mimir-http
  namespace: monitoring
spec:
  hostnames:
    - mimir.btkostner.network
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: mimir-gateway
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
